Bug 697189 - .gethardwareparams crashes with any special device
Summary: .gethardwareparams crashes with any special device
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: General (show other bugs)
Version: 9.20
Hardware: PC Linux
: P4 normal
Assignee: Ken Sharp
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-04 13:07 UTC by Tavis Ormandy
Modified: 2016-10-05 05:17 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tavis Ormandy 2016-10-04 13:07:08 UTC
$ gs -q -dSAFER -sDEVICE=pbmraw
GS>0 .getdevice null .gethardwareparams
Segmentation fault (core dumped)
Comment 1 Ken Sharp 2016-10-05 05:17:26 UTC
Fixed in commit aef8f6cfbff9080e4b9c54053bc909875c09a2be