Prevent dereference of NULL device method

Bug #697189 ".gethardwareparams crashes with any special device"

Another NULL device method problem. As noted previously, the original
design intended that device methods should never be NULL, but this
has been ignored over the years leading to the current mess of some
methods being NULL accidentally, some being NULL deliberately and
having different effects when NULL, and some methods never being NULL.

While I do still intend to try and rectify this one day, in the meantime
add a check to make sure the method is not NULL before trying to
execute it in this case.

No differences expected